# estam_clinic_backend

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  main.py  manage.py  pyproject.toml  pytest.ini  schema.yml
accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/management/commands/: seed_demo_data.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_api.py  test_models.py  test_permissions.py  test_serializers.py
backend/: settings.py  urls.py
clinic/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
clinic/migrations/: 0001_initial.py  0002_patient_matric_number.py  003_patient_category_blood_allergies.py
clinic/tests/: test_api.py  test_models.py  test_permissions.py  test_selectors.py  test_services.py
docs/: api-reference.md  deployment.md  development.md  rbac.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/app/: routes.ts  routes.tsx
frontend/src/app/components/: ProtectedRoute.tsx
frontend/src/app/context/: AuthContext.tsx
frontend/src/app/layouts/: DashboardLayout.tsx
frontend/src/app/pages/: Appointments.tsx  ClinicalRecord.tsx  Dashboard.tsx  LoginPage.tsx  Patients.tsx  StaffManagement.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/styles/: theme.css
